# weather-prediction

./: .gitignore  docker-compose.yml
services/forecast/: Dockerfile  main.py  predictor.py  pyproject.toml  settings.py
services/weather/: Dockerfile  pyproject.toml
services/weather/app/: main.py
services/weather/app/api/: main.py
services/weather/app/api/routes/: forecast.py  weather.py
services/weather/app/connections/: rabbitmq.py  redis.py
services/weather/app/core/: config.py  dependencies.py  logger.py
services/weather/app/repositories/: forecast.py  weather.py
services/weather/app/schemas/: forecast.py  weather.py
services/weather/app/services/: forecast.py  weather.py
services/weather/app/utils/: cities.py
