[project]
name = "forecast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aio-pika>=9.5.5",
    "aiohttp>=3.12.11",
    "aioredis>=2.0.1",
    "catboost>=1.2.8",
    "numpy>=2.1.3",
    "pandas>=2.3.0",
    "pydantic>=2.11.5",
    "redis>=6.2.0",
    "scikit-learn>=1.7.0",
]
