[project]
name = "app"
version = "0.1.0"
description = "Weather information service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aio-pika>=9.5.5",
    "aiohttp>=3.12.9",
    "fastapi[standard]>=0.115.12",
    "geopy>=2.4.1",
    "pydantic-settings>=2.9.1",
    "pydantic>=2.11.5",
    "redis>=6.2.0",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app", "app.core", "app.schemas", "app.services", "app.api", "app.api.routes"]
